third_party/rust/chromium_crates_io/vendor/proc-macro-error2-v2/tests/ui/multiple_tokens.stderr
error: ...
 --> tests/ui/multiple_tokens.rs:2:1
  |
2 | type T = ();
  | ^^^^^^^^^^^^
