third_party/rust/chromium_crates_io/vendor/proc-macro-error2-v2/tests/ui/multiple_tokens.rs
#[test_crate::multiple_tokens]
type T = ();

fn main() {}
